finished day 7 part two but need to make the last improve part 2 solution

--- a/Day 7 - Recursive Circus.ipynb
+++ b/Day 7 - Recursive Circus.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## a non graph hacky way to answe this\n",
+    "## a non graph hacky way to answer this\n",
     "\n",
     "The obvious way to answer this is to build a graph, but since the problem is so well defined - there is only one parent node, we can figure this out without lists.\n",
     "\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        " 'cntj (57)']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,19 @@
     {
      "data": {
       "text/plain": [
-       "['pbga', 'xhth', 'ebii', 'havc', 'ktlj']"
+       "['pbga',\n",
+       " 'xhth',\n",
+       " 'ebii',\n",
+       " 'havc',\n",
+       " 'ktlj',\n",
+       " 'fwft',\n",
+       " 'qoyq',\n",
+       " 'padx',\n",
+       " 'tknk',\n",
+       " 'jptl',\n",
+       " 'ugml',\n",
+       " 'gyxo',\n",
+       " 'cntj']"
       ]
      },
      "execution_count": 3,
@@ -147,7 +159,7 @@
    ],
    "source": [
     "nodes = [line.split()[0] for line in test_case]\n",
-    "nodes[:5]"
+    "nodes"
    ]
   },
   {
@@ -211,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +243,7 @@
        " 'jptl']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +273,7 @@
        "['tknk']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +300,7 @@
        "['tknk']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -325,10 +337,13 @@
        " 'lhrml (164) -> ecblhee, sdjshz',\n",
        " 'ykntwjm (16)',\n",
        " 'fbebcq (233) -> ilzfg, vqbvnf, idyiyg, tifpswp',\n",
-       " 'rqjpza (1043) -> xszbzi, zafhcbb, qoouyiw']"
+       " 'rqjpza (1043) -> xszbzi, zafhcbb, qoouyiw',\n",
+       " 'zazkyd (203) -> vzylhou, ndvkjn',\n",
+       " 'ndfxn (48) -> brxmlaa, nlbvsaj',\n",
+       " 'pfjpsxf (1714) -> uchxwm, ohpvb']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,12 +352,12 @@
     "with open('puzzle_inputs/day7_input.txt') as f:\n",
     "    data = f.read().split(\"\\n\")\n",
     "data = [line for line in data if len(line)>0]\n",
-    "data[:5]"
+    "data[:8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +366,7 @@
        "['cyrupz']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And that works! But, to do part two, I need to rewrite this..."
+    "And that works! Though my solution only deals with this puzzles case, a better one would be to buid a gragh, which it turns out I need to do for part 2 anyways..."
    ]
   },
   {
@@ -396,12 +411,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'm going to build a tower:"
+    "---\n",
+    "\n",
+    "I'm going to build a tower, and since we already know the bottom node from above, I'll start with that one. First, a class to hold the tower and all its sub towers:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,80 +429,250 @@
     "        self.parent = parent\n",
     "        self.sub_towers = sub_towers\n",
     "    \n",
-    "    def total_weight():\n",
+    "    def total_weight(self):\n",
     "        \"\"\"returns total weight of the tower\"\"\"\n",
-    "        if self.sub_towers:\n",
+    "        if self.sub_towers!=[]:\n",
     "            sub_towers_weight = sum([t.total_weight() for t in self.sub_towers])\n",
-    "            print(sub_towers_weight)\n",
     "            return self.weight + sub_towers_weight\n",
     "        else:\n",
     "            return self.weight\n",
     "        \n",
     "    def __str__(self):\n",
-    "        return f\"{self.name}, {self.weight}, has {sub_towers} subtowers\""
+    "        subs = [tower.name for tower in self.sub_towers if self.sub_towers!=[]]\n",
+    "        return f\"{self.name}, {self.weight}, has {subs} subtowers\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def build_tower(test_case):\n",
-    "    \"\"\"takes in a list of strings representing the nodes, weights and their sub nodes, returns a tower\"\"\"\n",
-    "    return False"
+    "Now a helper function to parse each nodes description:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('fbebcq', 233, ['ilzfg', 'vqbvnf', 'idyiyg', 'tifpswp'])"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse_line(tower_desc):\n",
+    "    \"\"\"takes in a line describing a tower and returns its name, weight, sub_towers\"\"\"\n",
+    "    tower = tower_desc.split()\n",
+    "    name = tower[0]\n",
+    "    weight = re.sub('[\\W_]+', \"\", tower[1])\n",
+    "    sub_towers = []\n",
+    "    # deal with subtowers\n",
+    "    if len(tower) > 3:\n",
+    "        sub_towers_names = [re.sub('[\\W]+', \"\", node) for node in tower[3:]]\n",
+    "        sub_towers = [st for st in sub_towers_names]\n",
+    "        \n",
+    "    return name, int(weight), sub_towers\n",
+    "\n",
+    "parse_line('fbebcq (233) -> ilzfg, vqbvnf, idyiyg, tifpswp')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now I'm going to use the Tower class and the parse_line function to recursively build out the entire tower:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pbga, 66, has [] subtowers\n",
-      "xhth, 57, has [] subtowers\n",
-      "ebii, 61, has [] subtowers\n",
-      "havc, 66, has [] subtowers\n",
-      "ktlj, 57, has [] subtowers\n",
-      "fwft, 72, has ['ktlj', 'cntj', 'xhth'] subtowers\n",
-      "qoyq, 66, has [] subtowers\n",
-      "padx, 45, has ['pbga', 'havc', 'qoyq'] subtowers\n",
+      "the first node is tknk\n",
       "tknk, 41, has ['ugml', 'padx', 'fwft'] subtowers\n",
-      "jptl, 61, has [] subtowers\n",
-      "ugml, 68, has ['gyxo', 'ebii', 'jptl'] subtowers\n",
-      "gyxo, 61, has [] subtowers\n",
-      "cntj, 57, has [] subtowers\n"
+      "the towers weight: 778\n"
      ]
     }
    ],
    "source": [
-    "def parse_line(tower_desc):\n",
-    "    tower = tower_desc.split()\n",
-    "    name = tower[0]\n",
-    "    weight = re.sub('[\\W_]+', \"\", tower[1])\n",
-    "    sub_towers = []\n",
+    "first_node = top_node(test_case)[0]\n",
+    "print(f\"the first node is {first_node}\")\n",
+    "\n",
+    "def build_tower(node, tower_description, parent=None):\n",
+    "    \"\"\"takes in a node name and list of strings \n",
+    "    representing the nodes, weights and their sub nodes, returns a tower\"\"\"\n",
+    "    all_nodes = [line.split()[0] for line in tower_description]\n",
+    "    node_index = all_nodes.index(node)\n",
+    "    node_desc = tower_description[node_index]\n",
     "    \n",
-    "    # deal with subtowers\n",
-    "    if len(line) > 3:\n",
-    "        sub_towers = [re.sub('[\\W]+', \"\", node) for node in line[3:]]\n",
+    "    name, weight, sub_towers = parse_line(node_desc)\n",
+    "    \n",
+    "    tower = Tower(name, weight, parent, sub_towers)\n",
+    "    if sub_towers:\n",
+    "        for i, sub_t in enumerate(sub_towers):\n",
+    "            sub_towers[i] = build_tower(sub_t, tower_description, name)       \n",
+    "    return tower\n",
+    "    \n",
+    "tower = build_tower(first_node, test_case)\n",
+    "print(tower)\n",
+    "print(f\"the towers weight: {tower.total_weight()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since only one tower is imbalanced, I'll go down through the tower, looking at its subtowers. Each subtower should have the same total weight, if it doesn't then that tower is causing the imbalance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found unbalance tower\n",
+      "ugml, 68, has ['gyxo', 'ebii', 'jptl'] subtowers\n",
+      "ugml weight should be: 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def find_unbalanced_subtower(tower):\n",
+    "    \"\"\"takes in a tower and returns the unbalanced sub_tower\"\"\"\n",
+    "    \n",
+    "    if not tower.sub_towers:\n",
+    "        return tower.weight\n",
+    "    \n",
+    "    unbalanced_tower, balanced_weight = None, 0\n",
+    "    \n",
+    "    names = [s.name for s in tower.sub_towers]\n",
+    "    weights = [s.total_weight() for s in tower.sub_towers]\n",
+    "    \n",
+    "    # check if this is the unbalanced tower\n",
+    "    if len(set(weights)) > 1:\n",
+    "        for weight, count in Counter(weights).items():\n",
+    "            if count == 1:\n",
+    "                unbalanced_weight = weight\n",
+    "            else:\n",
+    "                balanced_weight = weight\n",
+    "        print(\"found unbalance tower\")\n",
+    "        unbalanced_tower = tower.sub_towers[weights.index(unbalanced_weight)]\n",
     "        \n",
-    "    return name, weight, sub_towers\n",
+    "        for t in unbalanced_tower.sub_towers:\n",
+    "            find_unbalanced_subtower(t)\n",
+    "            \n",
+    "        return unbalanced_tower, balanced_weight\n",
+    "    else:\n",
+    "        for t in tower.sub_towers:\n",
+    "            find_unbalanced_subtower(t)\n",
     "    \n",
-    "for line in test_case:\n",
-    "    line = line.split()\n",
-    "    name = line[0]\n",
-    "    weight = re.sub('[\\W_]+', \"\", line[1])\n",
-    "    sub_towers = []\n",
-    "    \n",
-    "    # deal with subtowers\n",
-    "    if len(line) > 3:\n",
-    "        sub_towers = [re.sub('[\\W]+', \"\", node) for node in line[3:]]\n",
-    "    \n",
-    "    t = Tower(name, weight, None, sub_towers)\n",
-    "    print(t)"
+    "    return None\n",
+    "        \n",
+    "ans, balanced_weight = find_unbalanced_subtower(tower)\n",
+    "print(ans)\n",
+    "# weight shold be:\n",
+    "print(ans.name, \"weight should be:\", ans.weight - (ans.total_weight() - balanced_weight))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now to solve the test input:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the first node is cyrupz\n",
+      "found unbalance tower\n",
+      "found unbalance tower\n",
+      "qjvtm, 82986, has ['myfhxk', 'boropxd', 'jixdvf'] subtowers\n",
+      "82986 119432 119424\n",
+      "qjvtm weight should be: 82978\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_node = top_node(data)[0]\n",
+    "print(f\"the first node is {first_node}\")\n",
+    "tower2 = build_tower(first_node, data)\n",
+    "\n",
+    "ans, balanced_weight = find_unbalanced_subtower(tower2)\n",
+    "print(ans)\n",
+    "print(ans.weight, ans.total_weight(), balanced_weight)\n",
+    "print(ans.name, \"weight should be:\", ans.weight - (ans.total_weight() - balanced_weight))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we need to go down this node and find the unbalanced node:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found unbalance tower\n",
+      "4285 12154 12146\n",
+      "boropxd weight should be: 4277\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans2, balanced_weight = find_unbalanced_subtower(ans)\n",
+    "print(ans2.weight, ans2.total_weight(), balanced_weight)\n",
+    "print(ans2.name, \"weight should be:\", ans2.weight - (ans2.total_weight() - balanced_weight))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found unbalance tower\n",
+      "201 1131 1123\n",
+      "cwwwj weight should be: 193\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans3, balanced_weight = find_unbalanced_subtower(ans2)\n",
+    "print(ans3.weight, ans3.total_weight(), balanced_weight)\n",
+    "print(ans3.name, \"weight should be:\", ans3.weight - (ans3.total_weight() - balanced_weight))"
    ]
   },
   {
